force-app/main/default/objects/Candidate_Data_Issue__c/Candidate_Data_Issue__c.object-meta.xml
<CustomObject>
    <description>CV Review Agent - Candidate Data Issue</description>
    <label>Candidate Data Issue</label>
    <nameField>
        <label>Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Data Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>