force-app/main/default/objects/Candidate_Data_Issue__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing</fullName>
            </value>
            <value>
                <fullName>Uncertain</fullName>
            </value>
            <value>
                <fullName>Conflicting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>